Lego Editor Change Log
2012/02/?? - 0.55
  *  Improve error handling when snomed DB is missing
  *  Fixed deadlock that could happen if you typed in the snomed ID filter field before the Snomed
  		DB was initialized.
  *  Properly background thread the snomed filter / search option so it can't hang the entire GUI.
  *  artf227108 Add Install4j installer script.

2012/02/26 - 0.54
  *  Fix a silly mistake that lead to problems with template delete in some cases.
  *  artf227107 Add XHTML export option.  Rework existing XML export to have a proper dialog
  		and progress bar with status feedback.  Add the ability to export while running arbitrary
  		(user supplied) XSLT transforms.
  *  artf227621 Add a GUI dialog for creating new pending concepts.
  *  artf227621 Add a panel for browsing / searching the pending concepts.

2012/02/22 - 0.53
  *  Add missing 'delete template' option to template gui panel.
  *  artf227457 - Add error rollup icons to the tree, refactor validation out of the GUI code, 
		make it easy to hook in future SCT aware content validators.

2012/02/19 - 0.52
  *  Fixed a bug with copy/paste of Legos that caused previously edited legos to change and 
		generally behave strangely when a lego was pasted multiple times. 
  *  Allow import of Legos even when schema validation fails
  *  Add proper validation to the pending concepts file (no duplicates, no overlap with real snomed 
		concepts)
  *  Fix a bug that was allowing users to inadvertently change the name associated with a PNCS.
  *  Fix the recently-used drop down selections so that they properly update when legos are imported 
		and deleted.
  *  Allow right click -> create new lego on the PNCS name level of the lego list tree.  Prepopulates
		the name into the create dialog.
  *  Added missing XML header information to Lego exports
  *  artf227457 Add live schema validation to editor

2012/02/12 - 0.51
  *  Improved type distinction between expression types during copy / paste