@@ -4,6 +4,8 @@ Lego Editor Change Log
   *  Fixed deadlock that could happen if you typed in the snomed ID filter field before the Snomed
   		DB was initialized.
   *  Properly background thread the snomed filter / search option so it can't hang the entire GUI.
+  *  Fixed a null pointer that could happen if you brought up an editor tab before the commonly used 
+  		concepts finished intializing.
   *  artf227108 Add Install4j installer script.
 
 2012/02/26 - 0.54
